# keypoint_regression

./: .dockerignore  .gitignore  Dockerfile  README.md  best_model_pck2.pth  convert.py  dataset.py  model.py  pyproject.toml  ssh  ssh.pub  train.py  utils.py
.ipynb_checkpoints/: dataset-checkpoint.py  model-checkpoint.py  pyproject-checkpoint.toml  train-checkpoint.py  utils-checkpoint.py
classifier/: onnx_to_tf.py  onnx_to_to.py
data/: classifier.keras  weights.tflite
data/checkpoints/classifier/: weights.pth  weights.tflite
data/checkpoints/regressor/: weights.tflite
data/checkpoints/results_20250516_150325/: best_model_pck2.pth
data/raw/subset/: .~lock.subset.csv#  subset.csv
scripts/: convert.py  evaluate.py  inference.bash  speed_test.py  train_cl.py  train_reg.py
src/: config.py  dataset.py  dataset_cl.py  utils.py
src/models/: __init__.py  classifier.py  regressor.py
weights/: best_model_pck1.tflite
