[project]
name = "new-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "typer",
    "pydantic",
    "tensorflow[and-cuda]",
    "opencv-python",
    "pandas",
    "matplotlib",
    "tqdm",
    "scikit-learn>=1.6.1",
]

